# mc

./: .gitignore  .gitmodules  CMakeLists.txt
doc/: .latexmkrc  rules.tex
mf/include/: SourceRange.hpp  ast.hpp  ast_printer.hpp  log.hpp  scope.hpp  tokenizer.hpp  tokens.def  util.hpp
mf/src/: SourceRange.cpp  ast.cpp  ast_printer.cpp  log.cpp  main.cpp  parser.cpp  scope.cpp  tokenizer.cpp  util.cpp
my/include/: REPL.hpp  ast.hpp  ast_interpreter.hpp  myopts.hpp  parser.hpp  symbol.hpp  tokenizer.hpp  tokens.def  util.hpp
my/src/: REPL.cpp  ast.cpp  main.cpp  myopts.cpp  parser.cpp  source_range.cpp  symbol.cpp  tokenizer.cpp  util.cpp
tests/: run.zsh
tests/lex/: invoke.sh
tests/lex/negative/: undef.txt
tests/lex/positive/: emptiness.txt  ifelse.mf  ifelse.txt  lines.mcc  lines.txt
tests/parse/: invoke.sh
tests/parse/negative/: missing_parens.mf  missing_parens.txt  two_ids.mf  two_ids.txt
tests/parse/positive/: funs.mf  funs.txt
